--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
               <ul id="tm:3-sub:0" class="dark main-menu-list sub-menu-click">
                 <li>Login</li>
                 <li>Sign Up</li>
-                <li>Home</li>
-                <li class="sub-menu-wrapper parent">
+                <li class="sub-menu-wrapper parent ">
                   Browse
                   <img
                     class="arrow-icon"
@@ -70,14 +69,13 @@
                       <ul id="tm:3-sub:2" class="sub-menu dark sub-menu-click">
                         <li>Popular</li>
                         <li>New</li>
-                        <li class="select:qwerty">Most shared</li>
+                        <li class="select:browse">Most shared</li>
                       </ul>
                     </li>
                     <li>New</li>
                     <li>Most shared</li>
                   </ul>
                 </li>
-                <li>Upload</li>
                 <li class="select:about-us">About Us</li>
               </ul>
             </li>
@@ -88,7 +86,7 @@
               <ul id="tmb:1-sub:0" class="dark main-menu-list sub-menu-click">
                 <li>Login</li>
                 <li>Sign Up</li>
-                <li>Home</li>
+                <li class="select:browse">Home</li>
                 <li class="sub-menu-wrapper parent">
                   Browse
                   <img
